# lpc5536_cmake_template

./: .gitignore  Dockerfile  LPC5536.mex  README.md  freertos_hello_v3_13.xml
armgcc/: CMakeCache.txt  CMakeLists.txt  LPC5536_flash.ld  LPC5536_flash_bootloader.ld  Makefile  build_log.txt  build_release.sh  cmake_install.cmake  config.cmake  flags.cmake  ide_overrides.cmake  output.map
armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  JLink_freertos_hello.jlink  build.ninja  cmake_install.cmake  compile_commands.json  freertos_hello.elf  output.map
board/: all_sources.cmake  clock_config.c  clock_config.h  clock_config.h.bak  peripherals.c  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
sdk/: LPC5536_manifest_v3_13.xml  SW-Content-Register.txt
sdk/boards/lpcxpresso55s36/demo_apps/mc_pmsm/pmsm_periph_framework/armgcc/: CMakeLists.txt  config.cmake
sdk/components/audio/: component_audio_flexcomm_i2s_dma_adapter.LPC5536.cmake
sdk/components/codec/: component_codec_adapters.LPC55S36.cmake  component_cs42888_adapter.LPC5536.cmake  component_da7212_adapter.LPC5536.cmake  component_sgtl_adapter.LPC5536.cmake  component_wm8904_adapter.LPC5536.cmake  component_wm8960_adapter.LPC5536.cmake
sdk/components/crc/: component_crc_adapter.LPC5536.cmake  component_crc_adapter.LPC55S36.cmake  component_software_crc_adapter.LPC5536.cmake  component_software_crc_adapter.LPC55S36.cmake
sdk/components/els_pkc/: component_els_pkc.cmake  component_els_pkc_aead.cmake  component_els_pkc_aead_modes.cmake  component_els_pkc_cipher.cmake  component_els_pkc_cipher_modes.cmake  component_els_pkc_common.cmake  component_els_pkc_doc.cmake  component_els_pkc_ecc.cmake  component_els_pkc_els.cmake  component_els_pkc_els_common.cmake  component_els_pkc_examples.cmake  component_els_pkc_hash.cmake  component_els_pkc_key.cmake  component_els_pkc_mac.cmake  component_els_pkc_mac_modes.cmake  component_els_pkc_math.cmake  component_els_pkc_memory.cmake  component_els_pkc_oscca_sm3.cmake  component_els_pkc_padding.cmake  component_els_pkc_platform_lpc.cmake  component_els_pkc_random_modes.cmake  component_els_pkc_rsa.cmake  component_els_pkc_standalone_keyManagement.cmake  component_els_pkc_static_lib_lpc.cmake  component_els_pkc_trng_type_els.cmake  component_els_pkc_trng_type_rng4.cmake  softwareContentRegister.txt
sdk/components/ft5406/: driver_ft5406.LPC5536.cmake  driver_ft5406.LPC55S36.cmake
sdk/components/ft6x06/: driver_ft6x06.LPC5536.cmake
sdk/components/fxos8700cq/: driver_fxos8700cq.LPC5536.cmake  driver_fxos8700cq.LPC55S36.cmake
sdk/components/gpio/: component_gint_adapter.LPC55S36.cmake  component_lpc_gpio_adapter.LPC5536.cmake
src/: all_sources.cmake  dataType.h  freertos_hello.c  freertos_hello_v3_13.xml  main.c  versionInfo.c
(+1509 files in other folders)
